# nfrp

./: .gitignore  NFRP.cabal  PERFORMANCE.md  README.md  TODO.md  Talk.md  blog.md  botRun  nfrp.cabal  runAll  stack.yaml  tmp.out
.stack-work/install/x86_64-linux/lts-9.0/8.0.2/flag-cache/: NFRP-0.1.0.0-1uCZbBiWnDm26NCBMdtewu
.stack-work/install/x86_64-linux/lts-9.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/NFRP-0.1.0.0-1uCZbBiWnDm26NCBMdtewu/: Lib.hi
.stack-work/install/x86_64-linux/lts-9.0/8.0.2/pkgdb/: NFRP-0.1.0.0-1uCZbBiWnDm26NCBMdtewu.conf  package.cache
app/: Bench.hs  Calculator.hs  Circles.hs  Game01.hs  GameBlockReloadShoot.hs  KBGame.hs  Main.hs
app/Circles/: Game.hs
src/: Actuate.hs  Circuit.hs  ClockSync.hs  DMap.hs  DataFRP.hs  Example.hs  FRP.hs  GateRep.hs  HMap.hs  KnowledgeBase.hs  KnowledgeBaseGame.hs  Lazy.hs  Lib.hs  LiveCircuit.hs  M01_StaticNetwork.hs  MultiTimeline.hs  NFRP.hs  Networking.lhs  PureLazy.hs  ReactiveData.hs  Reactor.hs  Simulate.hs  SumExample.hs  Synthetic.hs  Theory.hs  TheoryFast.hs  Time.hs  TimeSpan.hs  Timeline.hs  TypeLevelStuff.hs
src/Circuit/: Actuate.hs  ClockSync.hs  Description.hs  History.hs  Net.hs
src/CircuitExp/: Actuate.hs  Description.hs
src/KnowledgeBase/: DMap.hs  FactMap.hs  Ix.hs  Timeline.hs
test/: Spec.hs
