cabal-version: >=1.10
name: NFRP
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2017 David Eichmann
-- maintainer: 
author: David Eichmann
-- homepage: https://github.com/githubuser/NFRP#readme
category: Web
build-type: Simple
extra-source-files:
    README.md

library
    exposed-modules:
        NFRP
    other-modules:
        TypeLevelStuff
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base ==4.11.1.0,
        array,
        mtl,
        containers >=0.5.9,
        network -any,
        stm -any,
        async -any,
        bytestring -any,
        cereal -any,
        vector -any,
        safe -any,
        gtk3 -any,
        time -any,
        transformers -any

executable Main
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ==4.11.1.0,
        containers >=0.5.9,
        async -any,
        network -any,
        NFRP -any,
        safe -any,
        gtk3 -any,
        time -any,
        ncurses -any

test-suite NFRP-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ==4.11.1.0,
        containers >=0.5.9,
        NFRP -any,
        cereal -any,
        time -any,
        tasty -any,
        tasty-hunit -any
