cabal-version: >=1.10
name: NFRP
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2017 David Eichmann
-- maintainer:
author: David Eichmann
-- homepage: https://github.com/githubuser/NFRP#readme
category: Web
build-type: Simple
extra-source-files:
    README.md

library
    exposed-modules:
          Circuit
        , GateRep
        , HMap
        , LiveCircuit
        , NFRP
        , Simulate
        , Time
        , TimeSpan
    other-modules:
        TypeLevelStuff
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ==4.11.1.0,
        array,
        async -any,
        bytestring -any,
        cereal -any,
        containers >=0.5.9,
        gtk3 -any,
        mtl,
        network -any,
        QuickCheck -any,
        random -any,
        safe -any,
        stm -any,
        time == 1.8.0.2,
        vector -any


executable Main
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ==4.11.1.0,
        containers >=0.5.9,
        async -any,
        network -any,
        NFRP -any,
        safe -any,
        gtk3 -any,
        time == 1.8.0.2

executable Circles
    main-is: Circles.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ==4.11.1.0,
        containers >=0.5.9,
        async -any,
        network -any,
        NFRP -any,
        safe -any,
        gtk3 -any,
        time == 1.8.0.2,
        ncurses -any,
        gloss -any

test-suite NFRP-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ==4.11.1.0,
        containers >=0.5.9,
        NFRP -any,
        cereal -any,
        time == 1.8.0.2,
        tasty -any,
        tasty-hunit -any,
        tasty-quickcheck -any
