cabal-version: >=1.10
name: nfrp
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2017 David Eichmann
-- maintainer:
author: David Eichmann
-- homepage: https://github.com/githubuser/NFRP#readme
category: Web
build-type: Simple
extra-source-files:
    README.md

library
    exposed-modules:
          ClockSync
        , DataFRP
        , FRP
        , NFRP
        , KnowledgeBase
        , KnowledgeBase.DMap
        , KnowledgeBase.Timeline
        , KnowledgeBase.Ix
        , Lazy
        , Reactor
        -- , Synthetic
        , Theory
        , TheoryFast
        , Time
        , TimeSpan
        , Timeline
        , MultiTimeline
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -fprof-auto -Wall
    build-depends:
        base == 4.12.0.0,
        array,
        async -any,
        binary -any,
        bytestring -any,
        containers >= 0.5.9,
        stm-containers,
        deepseq -any,
        -- dependent-map -any,
        generics-sop -any,
        -- gtk3 -any,
        hashable -any,
        mtl -any,
        network-simple -any,
        prettyprinter -any,
        QuickCheck -any,
        random -any,
        safe -any,
        -- singletons -any,
        stm -any,
        time == 1.8.0.2,
        transformers -any,
        vector -any


-- executable KBGame
--     main-is: KBGame.hs
--     hs-source-dirs: app
--     default-language: Haskell2010
--     ghc-options: -fprof-auto -Wall -threaded
--     build-depends:
--         base == 4.12.0.0,
--         containers >=0.5.9,
--         async -any,
--         network -any,
--         nfrp -any,
--         safe -any,
--         generics-sop -any,
--         -- gtk3 -any,
--         time == 1.8.0.2


-- executable Main
--     main-is: Main.hs
--     hs-source-dirs: app
--     default-language: Haskell2010
--     ghc-options: -fprof-auto -Wall -threaded
--     build-depends:
--         base == 4.12.0.0,
--         containers >=0.5.9,
--         async -any,
--         network -any,
--         nfrp -any,
--         safe -any,
--         generics-sop -any,
--         -- gtk3 -any,
--         time == 1.8.0.2

-- executable Circles
--     main-is: Circles.hs
--     hs-source-dirs: app
--     default-language: Haskell2010
--     ghc-options: -fprof-auto -Wall -threaded
--     other-modules:
--         Circles.Game
--     build-depends:
--         base == 4.12.0.0,
--         async -any,
--         binary -any,
--         cmdargs -any,
--         containers >=0.5.9,
--         deepseq -any,
--         gloss -any,
--         generics-sop -any,
--         -- gtk3 -any,
--         ncurses -any,
--         network -any,
--         nfrp -any,
--         safe -any,
--         time == 1.8.0.2

-- executable bench
--     main-is: Bench.hs
--     hs-source-dirs: app
--     default-language: Haskell2010
--     ghc-options: -O2 -Wall -threaded
--     build-depends:
--         base == 4.12.0.0,
--         async -any,
--         binary -any,
--         cmdargs -any,
--         containers >=0.5.9,
--         deepseq -any,
--         gloss -any,
--         generics-sop -any,
--         -- gtk3 -any,
--         ncurses -any,
--         network -any,
--         nfrp -any,
--         safe -any,
--         time == 1.8.0.2


test-suite nfrp-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -fprof-auto -threaded -threaded
    build-depends:
        base == 4.12.0.0,
        containers >=0.5.9,
        nfrp -any,
        binary -any,
        generics-sop -any,
        prettyprinter -any,
        time == 1.8.0.2,
        tasty -any,
        tasty-hunit -any,
        tasty-quickcheck -any
